# LASSI_GIT

./: .clang-format  .gitignore  CMakeLists.txt
examples/A_SingleMolecule/: README.md  energy_SM.prm
python/LASSI-Helper/: LASSI.py
src/: cluster.c  cluster.h  compile.sh  energy.c  energy.h  global.h  initialize.c  initialize.h  main.c  mcmove.c  mcmove.h  parsekey.c  parsekey.h  print.c  print.h  structure.c  structure.h
